# privacy-sexy-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
collections/: linux.yaml  macos.yaml  templating.md  windows.yaml
examples/: collection.rs  collection_from_file.rs  collection_from_str.rs  collection_from_url.rs  execute_script.rs  script_all.rs  script_recommend.rs  script_revert.rs  script_specific.rs
src/: README.md  collection.rs  lib.rs  main.rs  util.rs  windows.json  windows.yaml
tests/: collection.rs  parse.rs  parse_test.rs
tests/collections/: test1.txt  test1.yml
