[package]
name = "privacy-sexy"
version = "0.1.1"
edition = "2021"
authors = [
  "sn99 <siddharthn.099@gmail.com>",
  "arghyadipchak <arghyadip.chak16@gmail.com",
]
description = "Open-source tool to enforce privacy & security best-practices on Windows and MacOs, because privacy is sexy ðŸ‘ðŸ†"
keywords = ["privacy", "windows", "macos", "yaml", "security"]
readme = "README.md"
homepage = "https://github.com/sn99/privacy-sexy"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
serde_yaml = "0.9.21"
