[package]
name = "privacy-sexy"
version = "0.2.0"
edition = "2021"
authors = [
  "sn99 <siddharthn.099@gmail.com>",
  "arghyadipchak <arghyadip.chak16@gmail.com",
]
description = "Open-source tool to enforce privacy & security best-practices on Windows and MacOs, because privacy is sexy ðŸ‘ðŸ†"
keywords = ["privacy", "windows", "macos", "yaml", "security"]
homepage = "https://github.com/SubconsciousCompute/privacy-sexy-rs"
repository = "https://github.com/SubconsciousCompute/privacy-sexy-rs"
license = "MIT"
readme = "README.md"

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.2", features = ["derive"] }
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["blocking"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
thiserror = "1.0.44"
toml = "0.7.4"

[dev-dependencies]
glob = "0.3.1"

[profile.release]
codegen-units = 1
lto = true
